# gentoo-koam

./: CMakeLists.txt  KDE.md  Logo.md  README.md  koam.py  koamoid  metadata.desktop  setup.py
contents/code/: main.py
koam/: __init__.py  addserver.py  application.py  checkhost.py  command.py  controller.py  font.py  host.py  mainwindow.py  observer.py  preferences.py  process.py  progress.py  status.py  text.py  toolbar.py  view.py  widget.py
